--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <li><a href="Rotas_Rurais_RN.html">Mapa RN</a></li>
         <li><a href="Rotas_Rurais_RR.html">Mapa RR</a></li>
         <li><a href="Rotas_Rurais_RS.html">Mapa RS</a></li>
+        <li><a href="Kernel_Rotas_Rurais_Zacarias.html">Mapa de Zacarias - Kernel e Adensamento Rural</a></li>
+
     </ul>
 </body>
 </html>
