--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 <div class="grid-item"><a href="Kernel_Rotas_Rurais_pedro toledo.html">Pedro Toledo</a></div>
 <div class="grid-item"><a href="Kernel_Rotas_Rurais_cananeia.html">Cananeia</a></div>
 <div class="grid-item"><a href="Kernel_Rotas_Rurais_ilha comprida.html">Ilha Comprida</a></div>
-div class="grid-item"><a href="Kernel_Rotas_Rurais_pariquera-acu.html">Pariquera-Acu</a></div>
+<div class="grid-item"><a href="Kernel_Rotas_Rurais_pariquera-acu.html">Pariquera-Acu</a></div>
 <div class="grid-item"><a href="Kernel_Rotas_Rurais_barra turvo.html">Barra Turvo</a></div>
 <div class="grid-item"><a href="Kernel_Rotas_Rurais_cajati.html">Cajati</a></div>
 <div class="grid-item"><a href="Kernel_Rotas_Rurais_iporanga.html">Iporanga</a></div>
