--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
         <li><a href="Rotas_Rurais_RR.html">Mapa RR</a></li>
         <li><a href="Rotas_Rurais_RS.html">Mapa RS</a></li>
     </ul>
+<h2>Mapas de Kernel</h2>
+    <p>Acesse os mapas de Kernel, que mostram a densidade de pontos de interesse em cada região rural:</p>
+    <ul>
+        <li><a href="Kernel_Rotas_Rurais_RA.html">Mapa Kernel RA</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RB.html">Mapa Kernel RB</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RG.html">Mapa Kernel RG</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RM.html">Mapa Kernel RM</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RV.html">Mapa Kernel RV</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RT.html">Mapa Kernel RT</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RJ.html">Mapa Kernel RJ</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RN.html">Mapa Kernel RN</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RR.html">Mapa Kernel RR</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RS.html">Mapa Kernel RS</a></li>
+    </ul>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
