--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li><a href="Rotas_Rurais_RS.html">Mapa RS</a></li>
     </ul>
 <h2>Mapas de Kernel</h2>
-    <p>Acesse os mapas de Kernel, que mostram a densidade de pontos de interesse em cada região rural:</p>
+    <p>Utilizando as coordenadas do Programa Rotas Rurais, foram criadas mapas de Kernel para visualizar a densidade de pontos em cada área rural. Os mapas de Kernel, ilustrados por Superintendência e Municípios atendidos pela Sabesp, as cores variam em uma palete de cores "Spectral" de frias a quentes para indicar áreas de menor a maior densidade de edificações rurais.Acesse os mapas de Kernel, que mostram a densidade de pontos de interesse em cada região rural:</p>
     <ul>
         <li><a href="Kernel_Rotas_Rurais_RA.html">Mapa Kernel RA</a></li>
         <li><a href="Kernel_Rotas_Rurais_RB.html">Mapa Kernel RB</a></li>
