--- a/grafico.html
+++ b/grafico.html
@@ -3,10 +3,6 @@
 <head>
     <title>Distribuição de Áreas por Município e Classe DN</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dash/1.20.0/dash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dash-core-components/1.16.0/dash_core_components.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dash-html-components/1.1.3/dash_html_components.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dash-renderer/1.9.1/dash_renderer.min.js"></script>
 </head>
 <body>
     <div id="app">
@@ -19,62 +15,80 @@
     </div>
 
     <script>
-        // Carregar o arquivo XLSX e preparar os dados
-        const df = await fetch('DB_ReclassKernel_rec_NOME_BUSCA_Operados.xlsx')
-            .then(response => response.arrayBuffer())
-            .then(data => new Uint8Array(data));
-
-        // Converte a coluna 'Area' para Km², se necessário (assumindo que está em metros quadrados)
-        if (Math.max(...df.map(row => row['Area'])) > 1000000) {
-            df.forEach(row => row['Area'] /= 1000000);
+        // Função para carregar o arquivo XLSX e preparar os dados
+        async function loadData() {
+            const response = await fetch('DB_ReclassKernel_rec_NOME_BUSCA_Operados.xlsx');
+            const data = await response.arrayBuffer();
+            const workbook = XLSX.read(data, { type: 'array' });
+            const sheetName = workbook.SheetNames[0];
+            const sheet = workbook.Sheets[sheetName];
+            const json = XLSX.utils.sheet_to_json(sheet);
+            return json;
         }
 
-        // Função para atualizar o gráfico e as áreas conforme o município
-        function updateGraph(municipioSelecionado) {
-            const dfFiltrado = df.filter(row => row['MUN'] === municipioSelecionado);
-            const somaAreas = dfFiltrado.reduce((acc, row) => {
-                acc[row['DN']] = (acc[row['DN']] || 0) + row['Area'];
-                return acc;
-            }, {});
+        // Função para inicializar o gráfico e o dropdown
+        async function init() {
+            const df = await loadData();
 
-            const labels = Object.keys(somaAreas);
-            const values = Object.values(somaAreas);
+            // Converte a coluna 'Area' para Km², se necessário (assumindo que está em metros quadrados)
+            if (Math.max(...df.map(row => row['Area'])) > 1000000) {
+                df.forEach(row => row['Area'] /= 1000000);
+            }
 
-            const fig = {
-                data: [{
-                    type: 'pie',
-                    labels: labels,
-                    values: values,
-                    hole: 0.3
-                }],
-                layout: {
-                    title: `Distribuição de Áreas por Classe DN - ${municipioSelecionado}`,
-                    title_x: 0.5
-                }
-            };
+            // Inicializar o dropdown
+            const municipioDropdown = document.getElementById('municipio-dropdown');
+            const municipios = [...new Set(df.map(row => row['MUN']))];
+            municipios.forEach(municipio => {
+                const option = document.createElement('option');
+                option.value = municipio;
+                option.textContent = municipio;
+                municipioDropdown.appendChild(option);
+            });
 
-            Plotly.newPlot('pie-chart', fig);
+            // Atualizar o gráfico com o valor inicial
+            updateGraph(municipios[0]);
 
-            const areaInfo = labels.map((label, index) => `<li>Classe ${label}: ${values[index].toFixed(2)} km²</li>`).join('');
-            document.getElementById('area-info').innerHTML = `<ul>${areaInfo}</ul>`;
+            // Adicionar evento de mudança ao dropdown
+            municipioDropdown.addEventListener('change', (event) => {
+                updateGraph(event.target.value);
+            });
+
+            // Função para atualizar o gráfico e as áreas conforme o município
+            function updateGraph(municipioSelecionado) {
+                const dfFiltrado = df.filter(row => row['MUN'] === municipioSelecionado);
+                const somaAreas = dfFiltrado.reduce((acc, row) => {
+                    acc[row['DN']] = (acc[row['DN']] || 0) + row['Area'];
+                    return acc;
+                }, {});
+
+                const labels = Object.keys(somaAreas);
+                const values = Object.values(somaAreas);
+
+                const fig = {
+                    data: [{
+                        type: 'pie',
+                        labels: labels,
+                        values: values,
+                        hole: 0.3
+                    }],
+                    layout: {
+                        title: `Distribuição de Áreas por Classe DN - ${municipioSelecionado}`,
+                        title_x: 0.5
+                    }
+                };
+
+                Plotly.newPlot('pie-chart', fig);
+
+                const areaInfo = labels.map((label, index) => `<li>Classe ${label}: ${values[index].toFixed(2)} km²</li>`).join('');
+                document.getElementById('area-info').innerHTML = `<ul>${areaInfo}</ul>`;
+            }
         }
 
-        // Inicializar o dropdown e o gráfico
-        const municipioDropdown = document.getElementById('municipio-dropdown');
-        const municipios = [...new Set(df.map(row => row['MUN']))];
-        municipios.forEach(municipio => {
-            const option = document.createElement('option');
-            option.value = municipio;
-            option.textContent = municipio;
-            municipioDropdown.appendChild(option);
-        });
-
-        municipioDropdown.addEventListener('change', (event) => {
-            updateGraph(event.target.value);
-        });
-
-        // Atualizar o gráfico com o valor inicial
-        updateGraph(municipios[0]);
+        // Carregar a biblioteca XLSX e inicializar o app
+        const script = document.createElement('script');
+        script.src = 'https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js';
+        script.onload = init;
+        document.head.appendChild(script);
     </script>
 </body>
 </html>
