--- a/index.html
+++ b/index.html
@@ -488,5 +488,10 @@
     </div>
 </body>
 
+    <h1>Dashboards</h1>
+    <p>Clique no link abaixo para acessar o dashboard:</p>
+    <a href="http://127.0.0.1:5000" target="_blank">Acessar o Dashboard</a>
+</body>
+
 </html>
 
