--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
     <h1>Dashboards</h1>
     <p>Clique no link abaixo para acessar o dashboard:</p>
-    <a href="http://127.0.0.1:5000" target="_blank">Acessar o Dashboard</a>
+    <a href="http://192.168.0.47:8502/" target="_blank">Acessar o Dashboard</a>
 </body>
 
 </html>
