--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <h2>🔍 Acesse os Mapas</h2>
     <ul>
-        <li><a href="Rotas_Rurais_RA.html">Mapa RA</a></li>
+        <li><a href="Rotas_Rurais_RA.html">Mapa RG</a></li>
         <li><a href="Rotas_Rurais_RB.html">Mapa RB</a></li>
-        <li><a href="Rotas_Rurais_RG.html">Mapa RG</a></li>
+        <li><a href="Rotas_Rurais_RG.html">Mapa RA</a></li>
         <li><a href="Rotas_Rurais_RM.html">Mapa RM</a></li>
         <li><a href="Rotas_Rurais_RV.html">Mapa RV</a></li>
         <li><a href="Rotas_Rurais_RT.html">Mapa RT</a></li>
@@ -58,9 +58,9 @@
 <h2>Mapas de Kernel</h2>
     <p>Utilizando as coordenadas do Programa Rotas Rurais, foram criadas mapas de Kernel para visualizar a densidade de pontos em cada área rural. Os mapas de Kernel, ilustrados por Superintendência e Municípios atendidos pela Sabesp, as cores variam em uma palete de cores "Spectral" de frias a quentes para indicar áreas de menor a maior densidade de edificações rurais.Acesse os mapas de Kernel, que mostram a densidade de pontos de interesse em cada região rural:</p>
     <ul>
-        <li><a href="Kernel_Rotas_Rurais_RA.html">Mapa Kernel RA</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RA.html">Mapa Kernel RG</a></li>
         <li><a href="Kernel_Rotas_Rurais_RB.html">Mapa Kernel RB</a></li>
-        <li><a href="Kernel_Rotas_Rurais_RG.html">Mapa Kernel RG</a></li>
+        <li><a href="Kernel_Rotas_Rurais_RG.html">Mapa Kernel RA</a></li>
         <li><a href="Kernel_Rotas_Rurais_RM.html">Mapa Kernel RM</a></li>
         <li><a href="Kernel_Rotas_Rurais_RV.html">Mapa Kernel RV</a></li>
         <li><a href="Kernel_Rotas_Rurais_RT.html">Mapa Kernel RT</a></li>
