--- a/index.html
+++ b/index.html
@@ -482,7 +482,11 @@
         <li><a href="https://python-visualization.github.io/folium/">Folium</a>: Biblioteca Python para mapas interativos.</li>
         <li>GitHub Pages: Hospedagem gratuita para os mapas.</li>
     </ul>
-
+     <h1>Dashboards</h1>
+    <p>Clique no link abaixo para acessar o dashboard:</p>
+    <a href="http://192.168.0.47:8502/" target="_blank">Acessar o Dashboard</a>
+    </body>
+    </html>
     <div class="footer">
         <p>Desenvolvido por <strong>Fernando Yogi</strong> da Superintendência de Pesquisa, Desenvolvimento Tecnológico e Inovação. Departamento de Execução de Projetos de Pesquisa, Desenvolvimento e Inovação.</p>
     </div>
