--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     </ul>
      <h1>Dashboards</h1>
     <p>Clique no link abaixo para acessar o dashboard:</p>
-    <a href="http://192.168.0.47:8502/" target="_blank">Acessar o Dashboard</a>
+    <a href="http://10.7.169.36:8501" target="_blank">Acessar o Dashboard</a>
     </body>
     </html>
     <div class="footer">
